# photo_studio_essentials

./: .gitignore  CMakeLists.txt
include/: CMakeLists.txt  id.h
resources/: xrc.xml
src/: App.cpp  App.h  CMakeCache.txt  CMakeLists.txt  DisplayImage  Main.cpp  Main.h  id.h  main  mainc.cpp
